Added forced output for model

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/dancostin/Repos/book-worm/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/gianistatie/Documents/heits/book-worm/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -214,14 +214,14 @@
     }
    ],
    "source": [
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
+    "text_splitter = CharacterTextSplitter(separator=\".\", chunk_size=1000, chunk_overlap=0)\n",
     "documents = text_splitter.split_documents(raw_documents)\n",
     "db = Chroma.from_documents(documents, embedding_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7411d1bd-604d-40d3-a66c-4ae30f019750",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d3470a01-2afc-4e09-a32f-10be92e26b1e",
    "metadata": {},
    "outputs": [],
@@ -243,97 +243,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6c513e27-5fd8-45b0-97ec-8cd452800a84",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.docstore.document import Document\n",
-    "\n",
-    "doc =  Document(page_content=page_contents[0], metadata={\"source\": \"local\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "b87996d8-98c9-4393-8e1c-150bb78be412",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "text_splitter2 = CharacterTextSplitter(chunk_size=200, chunk_overlap=0)\n",
-    "documents = text_splitter2.split_documents([doc])\n",
-    "db = Chroma.from_documents(documents, embedding_model)"
+    "text_splitter2 = CharacterTextSplitter(chunk_size=256, chunk_overlap=0, separator=\".\",)\n",
+    "documents2 = text_splitter2.create_documents([page_contents[0]])\n",
+    "db2 = Chroma.from_documents(documents2, embedding_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
+   "id": "343b646b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(documents2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "56bf57c4-08ef-4aca-8572-8aa553733fdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = db.similarity_search(question)\n",
-    "page_contents = [doc.page_content for doc in docs]"
+    "docs2 = db2.similarity_search(question)\n",
+    "page_contents = [doc.page_content for doc in docs2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "5fb3b08d-0961-4d47-bdea-6a5c2e5dfe2c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"MARCUS AURELIUS ANTONINUS was born on April 26, A.D. 121. His real name\\nwas M. Annius Verus, and he was sprung of a noble family which claimed\\ndescent from Numa, second King of Rome. Thus the most religious of\\nemperors came of the blood of the most pious of early kings. His father,\\nAnnius Verus, had held high office in Rome, and his grandfather, of\\nthe same name, had been thrice Consul. Both his parents died young, but\\nMarcus held them in loving remembrance. On his father's death Marcus\\nwas adopted by his grandfather, the consular Annius Verus, and there was\\ndeep love between these two. On the very first page of his book Marcus\\ngratefully declares how of his grandfather he had learned to be gentle\\nand meek, and to refrain from all anger and passion. The Emperor Hadrian\\ndivined the fine character of the lad, whom he used to call not Verus\\nbut Verissimus, more Truthful than his own name. He advanced Marcus to\\nequestrian rank when six years of age, and at the age of eight made him\\na member of the ancient Salian priesthood. The boy's aunt, Annia Galeria\\nFaustina, was married to Antoninus Pius, afterwards emperor. Hence it\\ncame about that Antoninus, having no son, adopted Marcus, changing his\\nname to that which he is known by, and betrothed him to his daughter\\nFaustina. His education was conducted with all care. The ablest teachers\\nwere engaged for him, and he was trained in the strict doctrine of the\\nStoic philosophy, which was his great delight. He was taught to dress\\nplainly and to live simply, to avoid all softness and luxury. His body\\nwas trained to hardihood by wrestling, hunting, and outdoor games; and\\nthough his constitution was weak, he showed great personal courage to\\nencounter the fiercest boars. At the same time he was kept from the\\nextravagancies of his day. The great excitement in Rome was the strife\\nof the Factions, as they were called, in the circus. The racing drivers\\nused to adopt one of four colours--red, blue, white, or green--and their\\npartisans showed an eagerness in supporting them which nothing could\\nsurpass. Riot and corruption went in the train of the racing chariots;\\nand from all these things Marcus held severely aloof.\""
+       "'MARCUS AURELIUS ANTONINUS was born on April 26, A.D. 121. His real name\\nwas M. Annius Verus, and he was sprung of a noble family which claimed\\ndescent from Numa, second King of Rome'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "page_contents"
+    "page_contents[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "efb5d0aa-a08d-401c-a273-a639e0758372",
+   "execution_count": 62,
+   "id": "59d66744",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = get_question_prompt(question, page_contents[0])"
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class SummaryAnswerFormat(BaseModel):\n",
+    "    answer: str\n",
+    "\n",
+    "def get_question_prompt(question, context):\n",
+    "    system_prompt = \"Please ensure that your responses only use the provided CONTEXT.\"\n",
+    "    message = f\"Given the following CONTEXT: {context} \\nAnswer the QUESTION: {question}\"\n",
+    "    prompt_template = f'<s>[INST] <<SYS>>\\n{system_prompt}\\n<</SYS>>\\n\\n{message} [/INST]'\n",
+    "    return prompt_template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f22dca33-d229-4f3e-9e5b-416ff7af52b9",
+   "execution_count": 69,
+   "id": "efb5d0aa-a08d-401c-a273-a639e0758372",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mmodel(prompt, temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0\u001b[39m, max_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1024\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'self' is not defined"
+     "data": {
+      "text/plain": [
+       "'<s>[INST] <<SYS>>\\nPlease ensure that your responses only use the provided CONTEXT.\\n<</SYS>>\\n\\nGiven the following CONTEXT: MARCUS AURELIUS ANTONINUS was born on April 26, A.D. 121. His real name\\nwas M. Annius Verus, and he was sprung of a noble family which claimed\\ndescent from Numa, second King of Rome \\nAnswer the QUESTION: Who was Marcus Aurelius? [/INST]'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"Who was Marcus Aurelius?\"\n",
+    "\n",
+    "prompt = get_question_prompt(question, page_contents[0])\n",
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f22dca33-d229-4f3e-9e5b-416ff7af52b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from book_worm import BookWorm\n",
+    "\n",
+    "# book_worm = BookWorm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "28ea7815-79d8-456c-994a-7c9210f02e03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Llama.generate: prefix-match hit\n",
+      "\n",
+      "llama_print_timings:        load time =    5031.36 ms\n",
+      "llama_print_timings:      sample time =      10.83 ms /    54 runs   (    0.20 ms per token,  4985.69 tokens per second)\n",
+      "llama_print_timings: prompt eval time =    1428.25 ms /    11 tokens (  129.84 ms per token,     7.70 tokens per second)\n",
+      "llama_print_timings:        eval time =    7798.11 ms /    53 runs   (  147.13 ms per token,     6.80 tokens per second)\n",
+      "llama_print_timings:       total time =    9392.04 ms /    64 tokens\n"
      ]
     }
    ],
    "source": [
-    "result = self.model(prompt, temperature=0.0, max_tokens=1024)"
+    "from lmformatenforcer import CharacterLevelParser, JsonSchemaParser\n",
+    "\n",
+    "result = book_worm._llamacpp_with_character_level_parser(prompt, JsonSchemaParser(SummaryAnswerFormat.schema()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "fb53cf0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'answer': 'April 26, A.D. 121'}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "json.loads(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "195943c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2179"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(page_contents[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28ea7815-79d8-456c-994a-7c9210f02e03",
+   "id": "fe6b7019",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
